# shelf_client

./: .gitignore  GXM_Lock.txt  README.md  authentication.md  client.py  client_backup.py  config2.json  cron_test.py  lock.c  lock.h  lock_test.c  lock_test.py  requirements.txt  run_code_gen.py  server.py  start.sh  test.py  time.sh
client/: client.py
device_back/google/protobuf/: any_pb2.py
device_back/proto/gateway/: device_gateway.proto  device_gateway_pb2.py  device_gateway_pb2_grpc.py  device_messages.proto
example/: data.proto  data_pb2.py  data_pb2_grpc.py  device_gateway.proto
gateway_proto/: device_gateway.proto  device_gateway_pb2.py  device_gateway_pb2_grpc.py  run_code_gen.py
gateway_proto/proto/: .gitlab-ci.yml
gateway_proto/proto/controller/: BUILD.bazel  device_controller.proto
gateway_proto/proto/detection/: BUILD.bazel  object_detection.proto
gateway_proto/proto/errors/: BUILD.bazel  device_errors.proto
gateway_proto/proto/events/: BUILD.bazel  device_events.proto
gateway_proto/proto/gateway/: BUILD.bazel  device_gateway.proto
gateway_proto/proto/gateway/payload/: BUILD.bazel  message_payload.proto
gateway_proto/proto/messages/: BUILD.bazel  device_messages.proto
gateway_proto/proto/state/: BUILD.bazel  device_state.proto
gateway_proto/proto/storage/: BUILD.bazel  device_storage.proto
lib/: any_pb2.py  device_gateway_pb2.py  device_gateway_pb2_grpc.py
lib/data/: camera.py  device.py  door.py  light.py  lock.py  monitor.py  shelf.py
lib/interceptors/headers/: greeter_client.py  greeter_server.py  header_manipulator_client_interceptor.py
lib/tools/: aliyun.py  message_controller.py  message_manage.py  video_tool.py
server/: server.py
