load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_grpc_library")
load("@grpc_java//:java_grpc_library.bzl", "java_grpc_library")
load("@com_guoxiaomei_rules_guoxiaomei//java:def.bzl", "maven_deploy_sh")

proto_library(
    name = "controller_proto",
    srcs = ["device_controller.proto"],
    visibility = ["//visibility:public"],
    deps = [
        "//device/proto/errors:errors_proto",
        "@com_google_protobuf//:any_proto",
        "@com_google_protobuf//:duration_proto",
    ],
)

go_grpc_library(
    name = "controller_go_proto",
    importpath = "guoxiaomei.com/device/proto/controller",
    proto = ":controller_proto",
    visibility = ["//visibility:public"],
    deps = [
        "//device/proto/errors:go_default_library",
        "@com_github_golang_protobuf//ptypes/any:go_default_library",
        "@com_github_golang_protobuf//ptypes/duration:go_default_library",
    ],
)

go_library(
    name = "go_default_library",
    importpath = "guoxiaomei.com/device/proto/controller",
    library = ":controller_go_proto",
    visibility = ["//visibility:public"],
)

java_proto_library(
    name = "controller_java_proto",
    visibility = ["//visibility:public"],
    deps = [
        ":controller_proto",
    ],
)

java_grpc_library(
    name = "controller_java_grpc",
    srcs = [":controller_proto"],
    deps = [
        ":controller_java_proto",
    ],
)

maven_deploy_sh(
    name = "device-controller-proto",
    src = ":controller_java_proto",
    group_id = "com.guoxiaomei.proto.device",
)

maven_deploy_sh(
    name = "device-controller-grpc-proto",
    src = ":controller_java_grpc",
    group_id = "com.guoxiaomei.proto.device",
)
