load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_grpc_library")

proto_library(
    name = "detection_proto",
    srcs = ["object_detection.proto"],
    visibility = ["//visibility:public"],
)

go_grpc_library(
    name = "detection_go_proto",
    importpath = "guoxiaomei.com/device/proto/detection",
    proto = ":detection_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "go_default_library",
    importpath = "guoxiaomei.com/device/proto/detection",
    library = ":detection_go_proto",
    visibility = ["//visibility:public"],
)
