load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("@com_guoxiaomei_rules_guoxiaomei//java:def.bzl", "maven_deploy_sh")

proto_library(
    name = "errors_proto",
    srcs = ["device_errors.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "errors_go_proto",
    importpath = "guoxiaomei.com/device/proto/errors",
    proto = ":errors_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "go_default_library",
    importpath = "guoxiaomei.com/device/proto/errors",
    library = ":errors_go_proto",
    visibility = ["//visibility:public"],
)

java_proto_library(
    name = "errors_java_proto",
    visibility = ["//visibility:public"],
    deps = [
        ":errors_proto",
    ],
)

maven_deploy_sh(
    name = "device-errors-proto",
    src = ":errors_java_proto",
    group_id = "com.guoxiaomei.proto.device",
)
