load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("@com_guoxiaomei_rules_guoxiaomei//java:def.bzl", "maven_deploy_sh")

proto_library(
    name = "events_proto",
    srcs = ["device_events.proto"],
    visibility = ["//visibility:public"],
    deps = ["@com_google_protobuf//:duration_proto"],
)

go_proto_library(
    name = "events_go_proto",
    importpath = "guoxiaomei.com/device/proto/events",
    proto = ":events_proto",
    visibility = ["//visibility:public"],
    deps = ["@com_github_golang_protobuf//ptypes/duration:go_default_library"],
)

go_library(
    name = "go_default_library",
    importpath = "guoxiaomei.com/device/proto/events",
    library = ":events_go_proto",
    visibility = ["//visibility:public"],
)

java_proto_library(
    name = "events_java_proto",
    visibility = ["//visibility:public"],
    deps = [
        ":events_proto",
    ],
)

maven_deploy_sh(
    name = "device-events-proto",
    src = ":events_java_proto",
    group_id = "com.guoxiaomei.proto.device",
)
