load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_grpc_library")

proto_library(
    name = "gateway_proto",
    srcs = ["device_gateway.proto"],
    visibility = ["//visibility:public"],
    deps = ["@com_google_protobuf//:any_proto"],
)

go_library(
    name = "go_default_library",
    importpath = "guoxiaomei.com/device/proto/gateway",
    library = ":gateway_go_proto",
    visibility = ["//visibility:public"],
)

go_grpc_library(
    name = "gateway_go_proto",
    importpath = "guoxiaomei.com/device/proto/gateway",
    proto = ":gateway_proto",
    visibility = ["//visibility:public"],
    deps = ["@com_github_golang_protobuf//ptypes/any:go_default_library"],
)
