load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("@com_guoxiaomei_rules_guoxiaomei//java:def.bzl", "maven_deploy_sh")

proto_library(
    name = "state_proto",
    srcs = ["device_state.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "state_go_proto",
    importpath = "guoxiaomei.com/device/proto/state",
    proto = ":state_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "go_default_library",
    importpath = "guoxiaomei.com/device/proto/state",
    library = ":state_go_proto",
    visibility = ["//visibility:public"],
)

java_proto_library(
    name = "state_java_proto",
    visibility = ["//visibility:public"],
    deps = [
        ":state_proto",
    ],
)

maven_deploy_sh(
    name = "device-state-proto",
    src = ":state_java_proto",
    group_id = "com.guoxiaomei.proto.device",
)
