load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "payload_proto",
    srcs = ["message_payload.proto"],
    visibility = ["//visibility:public"],
    deps = ["//device/proto/state:state_proto"],
)

go_proto_library(
    name = "payload_go_proto",
    importpath = "guoxiaomei.com/device/proto/gateway/payload",
    proto = ":payload_proto",
    visibility = ["//visibility:public"],
    deps = ["//device/proto/state:go_default_library"],
)

go_library(
    name = "go_default_library",
    importpath = "guoxiaomei.com/device/proto/gateway/payload",
    library = ":payload_go_proto",
    visibility = ["//visibility:public"],
)
